adding part 1 5010 week 4

--- a/BecasueOfSchool/5009_ML_Supervised_Learning/5009_ml_project.ipynb
+++ b/BecasueOfSchool/5009_ML_Supervised_Learning/5009_ml_project.ipynb
@@ -2737,7 +2737,7 @@
    "source": [
     "## Importance Conclusions\n",
     "\n",
-    "### Well, I'm not sure what to make of this. There don't seem to be many consistent top ten features between the models. Since i've run this file multiple times, at one piint I would have recommended that you don't eat foul smelling mushrooms!\n",
+    "### Well, I'm not sure what to make of this. There don't seem to be many consistent top ten features between the models. Since i've run this file multiple times, at one point I would have recommended that you don't eat foul smelling mushrooms!\n",
     "\n",
     "This tells me that there is either :\n",
     "1. possibly a combination of features (interactions) that are impacting the result \n",
